bml/test/syntax-errors/no-close.bml
Tag vs Tga:
<?tag Foo tga?>
